--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <title>Meme Generator</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-    
-    <script src="js/main.js"></script>
+<body onload="init()">
+    <header>
+        <div></div>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </header>
+    <section class="gallery">
+        <h1>gallery</h1>
+            <!-- <img src="img/1.jpg" alt=""> -->
+    </section>
+
+    <section class="meme-editor-container">
+        <form class="control-box" onsubmit="onSetLineTxt(event)">
+            <input  name ="new-line-txt" type="text"  placeholder="Text"> 
+        <!-- <button class="add-line-btn"></button> -->
+        </form>
+        <div class="edited-meme-container">
+            <canvas id="edited-meme-canvas" width="400" height="400" style="outline: 1px solid red" ></canvas>
+        </div>
+    </section>
+    <script src="js/meme-service.js"></script>
+    <script src="js/meme-controller.js"></script>
+    <script src="js/gallery-service.js"></script>
+    <script src="js/gallery-controller.js"></script>
 </body>
 </html>
